<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4choice HeartSutra</string>
    <string name="admob_id">ca-app-pub-4623298212622664/3911393437</string>
    <string name="settings">Setting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Paused</string>
    <string name="resume">Resume</string>
    <string name="goto_top">Start from the beginning</string>
    <string name="replay">Replay</string>
    <string name="exit">End of game</string>
    <string name="good_works">Were cheers for good work</string>
    <string name="return_opening">Return to the opening screen</string>
    <string name="start">Start</string>
    <string name="usage">How To Play</string>
    <string name="ranking">Record</string>
    <string name="reading">Loading...</string>

    <string name="send">Send</string>
	<string name="err_dialog_title">Error Reporting</string>
	<string name="err_dialog_msg">Last time, it would exit with an error, I am sorry. The very helpful because it used to improve in the future, and you could send us the error the manufacturer. Information privacy is not sent.</string>
	<string name="err_dialog_msg2">I am sorry. An unexpected error has occurred. The very helpful because it used to improve in the future, and you could send us the error the manufacturer. Information privacy is not sent.</string>

    <string name="sound_none">none</string>
    <string name="sound_none_note">soundless</string>
    <string name="sound_drop">Drop</string>
    <string name="sound_drop_note">plop</string>
    <string name="sound_hyu">Wind</string>
    <string name="sound_hyu_note">whizz</string>
    <string name="sound_poku">Wooden fish</string>
    <string name="sound_poku_note">knock</string>
    <string name="sound_chiiin">Buddhist altar</string>
    <string name="sound_chiiin_note">ting</string>
    <string name="sound_gooon">Large bronze bowl</string>
    <string name="sound_gooon_note">bong</string>
    <string name="sound_syan">Khakkhara</string>
    <string name="sound_syan_note">clank</string>
    <string name="sound_pachi">Applause</string>
    <string name="sound_pachi_note">clap</string>
    <string name="sound_ton">Drum</string>
    <string name="sound_ton_note">rat-a-tat</string>
    <string name="sound_clock">Clock</string>
    <string name="sound_clock_note">ticktack</string>
    <string name="sound_kan">Wooden clappers</string>
    <string name="sound_kan_note">Rap</string>
    <string name="sound_tuketaiko">Tambourine</string>
    <string name="sound_tuketaiko_note">rat-a-tat</string>
    <string name="sound_tuzumi">Hand drum</string>
    <string name="sound_tuzumi_note">Pop!</string>
    <string name="sound_dora">Gong</string>
    <string name="sound_dora_note">Bong</string>
    <string name="sound_onsa">Tuning fork</string>
    <string name="sound_onsa_note">Frequency/528Hz</string>

</resources>