<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" >

    <LinearLayout
        android:id="@+id/mokugyo_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/mokugyo_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_poku"
            android:onClick="onMokugyoButtonClicked" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pause_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/btn_pause" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/pause"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_resume"
            android:onClick="onResumButtonClicked"
            android:text="@string/resume" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_replay"
            android:onClick="onReplayButtonClicked"
            android:text="@string/goto_top" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_return_opening"
            android:onClick="onReturnOpeningButtonClicked"
            android:text="@string/return_opening" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_exit"
            android:onClick="onExitButtonClicked"
            android:text="@string/exit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/score_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/btn_score" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/good_works"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="top|center"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_replay"
            android:onClick="onReplayButtonClicked"
            android:text="@string/replay" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_return_opening"
            android:onClick="onReturnOpeningButtonClicked"
            android:text="@string/return_opening" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_exit"
            android:onClick="onExitButtonClicked"
            android:text="@string/exit" />

        <com.google.ads.AdView
            android:id="@+id/adViewBanner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_id" />
    </LinearLayout>

</merge>